handle uri/url from Config